Server/k8s/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: songtracker-pro-api
spec:
  rules:
    - host: web.local
      http:
        paths:
          - backend:
              serviceName: songtracker-pro-api
              servicePort: http
